# vega

./: .gitignore  CMakeLists.txt  README.md
.vega/config/: vega.json
.vega/modules/core/: core.regex
core/: CoreModule.cpp  CoreModule.hpp  README.md
scripts/: add_regex.py
server/: Application.cpp  Application.hpp  ServerBuilder.cpp  ServerBuilder.hpp  main.cpp
shared/: CommandTemplate.cpp  CommandTemplate.hpp  Log.cpp  Log.hpp  SettingLoader.cpp  SettingLoader.hpp  Vega.hpp  VegaModule.hpp
